Add compatibility with phones (but not fully working yet) Add browser logo to the app instead of standard vite logo Add multiplayer chat in room Add web analytics using Vercel Add game mode selector Add sound integration (for timer warning) Add Guess The Eval component that includes browser stockfish Removed ‘guess the game’ header when in game Fit to screen on laptops/PCs without scrolling

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "chess.js": "^1.4.0",
     "react": "^19.1.1",
     "react-chessboard": "^3.0.1",
     "react-dom": "^19.1.1",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "stockfish": "^17.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
