--- a/vercel.json
+++ b/vercel.json
@@ -30,7 +30,9 @@
       "source": "/stockfish/(.*\\.wasm)",
       "headers": [
         { "key": "Content-Type", "value": "application/wasm" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" }
+        { "key": "Content-Encoding", "value": "identity" },
+        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
+        { "key": "Cache-Control", "value": "no-transform" }
       ]
     }
   ]
