--- a/vercel.json
+++ b/vercel.json
@@ -32,7 +32,8 @@
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable, no-transform" },
         { "key": "Content-Encoding", "value": "identity" },
         { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
-        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" }
+        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
+        { "key": "x-vercel-cache-bypass", "value": "1" }
       ]
     },
     {
