--- a/vercel.json
+++ b/vercel.json
@@ -11,37 +11,40 @@
   ],
   "headers": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
-        { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" }
-      ]
-    },
-    {
-      "source": "/stockfish/(.*\\.bin)",
+      "source": "/stockfish/(.*)",
       "headers": [
         { "key": "Content-Type", "value": "application/wasm" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/stockfish/(.*\\.wasm)",
-      "headers": [
-        { "key": "Content-Type", "value": "application/wasm" },
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable, no-transform" },
         { "key": "Content-Encoding", "value": "identity" },
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
         { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
-        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
-        { "key": "x-vercel-cache-bypass", "value": "1" }
-      ]
-    },
-    {
-      "source": "/stockfish/(.*\\.js)",
-      "headers": [
-        { "key": "Content-Type", "value": "application/javascript" },
-        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" }
+        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" }
       ]
     }
-  ]
+  ],
+  "overrides": {
+    "public/stockfish/stockfish-17.1-8e4d048-part-0.wasm": {
+      "contentType": "application/wasm",
+      "encoding": "identity"
+    },
+    "public/stockfish/stockfish-17.1-8e4d048-part-1.wasm": {
+      "contentType": "application/wasm",
+      "encoding": "identity"
+    },
+    "public/stockfish/stockfish-17.1-8e4d048-part-2.wasm": {
+      "contentType": "application/wasm",
+      "encoding": "identity"
+    },
+    "public/stockfish/stockfish-17.1-8e4d048-part-3.wasm": {
+      "contentType": "application/wasm",
+      "encoding": "identity"
+    },
+    "public/stockfish/stockfish-17.1-8e4d048-part-4.wasm": {
+      "contentType": "application/wasm",
+      "encoding": "identity"
+    },
+    "public/stockfish/stockfish-17.1-8e4d048-part-5.wasm": {
+      "contentType": "application/wasm",
+      "encoding": "identity"
+    }
+  }
 }
