--- a/vercel.json
+++ b/vercel.json
@@ -1,50 +1,29 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
   "devCommand": "npm run dev",
   "framework": "vite",
-  "rewrites": [
-    {
-      "source": "/((?!stockfish).*)",
-      "destination": "/index.html"
-    }
-  ],
+  "outputDirectory": "dist",
   "headers": [
     {
-      "source": "/stockfish/(.*)",
+      "source": "/(.*\\.wasm)",
       "headers": [
         { "key": "Content-Type", "value": "application/wasm" },
         { "key": "Content-Encoding", "value": "identity" },
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" },
-        { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
-        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" }
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
+      ]
+    },
+    {
+      "source": "/stockfish/(.*)",
+      "headers": [
+        { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" }
+      ]
+    },
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
+        { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" }
       ]
     }
-  ],
-  "overrides": {
-    "public/stockfish/stockfish-17.1-8e4d048-part-0.wasm": {
-      "contentType": "application/wasm",
-      "encoding": "identity"
-    },
-    "public/stockfish/stockfish-17.1-8e4d048-part-1.wasm": {
-      "contentType": "application/wasm",
-      "encoding": "identity"
-    },
-    "public/stockfish/stockfish-17.1-8e4d048-part-2.wasm": {
-      "contentType": "application/wasm",
-      "encoding": "identity"
-    },
-    "public/stockfish/stockfish-17.1-8e4d048-part-3.wasm": {
-      "contentType": "application/wasm",
-      "encoding": "identity"
-    },
-    "public/stockfish/stockfish-17.1-8e4d048-part-4.wasm": {
-      "contentType": "application/wasm",
-      "encoding": "identity"
-    },
-    "public/stockfish/stockfish-17.1-8e4d048-part-5.wasm": {
-      "contentType": "application/wasm",
-      "encoding": "identity"
-    }
-  }
+  ]
 }
