--- a/vercel.json
+++ b/vercel.json
@@ -5,26 +5,19 @@
   "framework": "vite",
   "headers": [
     {
-      "source": "/stockfish/:path*",
+      "source": "/stockfish/(.*\\.js)",
       "headers": [
-        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
-        { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
+        { "key": "Content-Type", "value": "application/javascript" },
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable, no-transform" }
+      ]
+    },
+    {
+      "source": "/stockfish/(.*\\.wasm)",
+      "headers": [
+        { "key": "Content-Type", "value": "application/wasm" },
+        { "key": "Content-Encoding", "value": "identity" },
         { "key": "Cross-Origin-Resource-Policy", "value": "same-origin" },
-        { "key": "Cache-Control", "value": "no-transform" },
-        { "key": "Content-Encoding", "value": "identity" }
-      ]
-    },
-    {
-      "source": "/assets/:path*",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/:path*",
-      "headers": [
-        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" },
-        { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" }
+        { "key": "Cache-Control", "value": "no-transform" }
       ]
     }
   ]
