--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,10 @@
       "source": "/stockfish/(.*\\.js)",
       "headers": [
         { "key": "Content-Type", "value": "application/javascript" },
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable, no-transform" }
+        { "key": "Content-Encoding", "value": "identity" },
+        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable, no-transform" },
+        { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
+        { "key": "Cross-Origin-Opener-Policy", "value": "same-origin" }
       ]
     },
     {
