--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     {
       "source": "/stockfish/(.*\\.js)",
       "headers": [
-        { "key": "Content-Type", "value": "application/javascript" },
+        { "key": "Content-Type", "value": "application/javascript; charset=utf-8" },
         { "key": "Content-Encoding", "value": "identity" },
         { "key": "Cache-Control", "value": "public, max-age=31536000, immutable, no-transform" },
         { "key": "Cross-Origin-Embedder-Policy", "value": "require-corp" },
